force-app/main/default/objects/User/fields/Case_Created__c.field-meta.xml
<CustomField>
    <fullName>Case_Created__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Case Created</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>