force-app/main/default/objects/User/fields/Con_Creator__c.field-meta.xml
<CustomField>
    <fullName>Con_Creator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Con Creator</label>
    <type>Checkbox</type>
</CustomField>