force-app/main/default/objects/User/fields/User_license__c.field-meta.xml
<CustomField>
    <fullName>User_license__c</fullName>
    <formula>CASE($Profile.UsageType,&quot;Salesforce&quot;,&quot;Salesforce Platform&quot;,&quot;Chatter&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>license</label>
    <type>Text</type>
</CustomField>